--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.App-title {
+  text-align: center;
+  justify-content:  center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-logo {
+  height: 40vmin;
 }
+
+.Button {
+  padding: 1rem;
+  background-color: aqua;
+  border: 0;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: medium;
+}
+
+.push-notification-title {
+  font-size: x-small;
+  display: flex;
+  justify-content: space-between;
+  color: #014361;
+  
+}
+
+.push-notification-text {
+  font-size: 18px;
+  font-weight: 300;
+  font-style: normal;
+  margin: 0;
+  padding-bottom: 1rem;
+  letter-spacing: 1px;
+}
+
+.notification {
+  position: absolute;
+  top:0;
+  right:0;
+  margin:2rem;
+  background-color: #e5f6fd;
+  padding: 0 2rem 0 2rem;
+  width: 20rem;
+  border-radius: 1rem;
+}
+
+.close-button {
+  background-color: transparent;
+  border:0;
+  cursor: pointer;
+}
+
+.notification-banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 12px 16px;
+  background: #3e5fcd;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.notification-banner-link {
+  margin-left: 4px;
+  color: #ffffff;
+}
+
+
+
+
